# netbox-vrf-context

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tasks.py
development/: Dockerfile  configuration.py  dev.env  dev.env.example  docker-compose.yml
vrf_context/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
vrf_context/api/: serializers.py  urls.py  views.py
vrf_context/migrations/: 0001_initial.py
vrf_context/templates/vrf_context/: vrfcontext.html
